fix: status update
